#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Semester2-final-project], [0.0], [13nixonf@gmail.com])

AM_INIT_AUTOMAKE(Semester2-final-project, 2.6)

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile src/universe/Makefile src/welcomescreen/Makefile src/planets/Makefile)
