#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Semester2-final-project], [0.0], [13nixonf@gmail.com])

AM_INIT_AUTOMAKE(Semester2-final-project, 2.6)


# java macro stuff that wheren't being found for some reason
m4_include([m4/ax_java.m4])




# Checks for programs.
JAVAC=javac
#AC_CHECK_CLASSPATH
AX_PROG_JAVAC
AX_PROG_JAVA
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile src/universe/Makefile src/welcomescreen/Makefile src/planets/Makefile src/cities/Makefile)
