AUTOMAKE_OPTIONS = foreign
dir = .
#SUBDIRS = engine.universe ui.welcomescreen engine.planets engine.cities
_JAVA = $(wildcard */*.java) $(wildcard *.java)
JAVAROOT = ../bin/
AM_JAVACFLAGS = -d ${top_srcdir}/bin/ -g -sourcepath ${top_srcdir}/src/engine.universe:${top_srcdir}/src/engine.cities:${top_srcdir}/src/engine.planets:../src/
